--- a/index.html
+++ b/index.html
@@ -1,32 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="main-wrap">
-        <div class="top-bar">
-            <div class="top-title-box">
-                <h1 class="hero-title">
-                    DA-103 Blog
-                </h1>
-                <div class="top-nav-box">
-                    <ul class="top-nav">
-                        <li class="top-nav-item">
-                            <a href="index.html" class="top-nav-link">Home</a>
-                        </li>
-                        <li class="top-nav-item">
-                            <a href="https://github.com/Catrat6" class="top-nav-link" target="_blank">Github</a>
-                        </li>
-                        <li class="top-nav-item">
-                            <a href="https://www.blackmagik.xyz/" class="top-nav-link" target="_blank">Portfolio</a>
-                        </li>
-                    </ul>
-                </div>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+      <link rel="manifest" href="favicon_io/site.webmanifest">
+      <link rel="stylesheet" href="/css/style.css">
+      <title>DA-103 | Blog</title>
+   </head>
+   <body>
+      <div class="main-wrap">
+      <div class="top-bar">
+         <div class="top-title-box">
+            <h1 class="hero-title">
+               DA-103 Blog <span class="cursor"></span>
+            </h1>
+            <div class="top-nav-box">
+               <ul class="top-nav">
+                  <!-- <li class="top-nav-item">
+                     <a href="index.html" class="top-nav-link">Home</a>
+                     </li> -->
+                  <li class="top-nav-item">
+                     <a href="https://github.com/Catrat6" class="top-nav-link" target="_blank">Github</a>
+                  </li>
+                  <li class="top-nav-item">
+                     <a href="https://www.blackmagik.xyz/" class="top-nav-link" target="_blank">Portfolio</a>
+                  </li>
+               </ul>
             </div>
-        </div>
-    </div>
-</body>
+         </div>
+      </div>
+      <div class="body-wrap">
+         <div class="body-wrap-top-box">
+            <div class="body-about-title">
+               About
+            </div>
+            <div class="body-about">
+               <p>
+                  This is a simple blog that I made for my info-tech course DA-103. It was part of a homework assignment we had that covered social media as well as phases and development of the internet. One of the main tasks was to create a blog and make our initial entry. We were not required to spin up our own server or write the HTML and CSS from scratch, but because I have a web design background and it had been a while since I got to mess around with that type of stuff, I decided to buy my own domain, spin up a basic server running Apache, and put together a simple blog. For now, it will just be a simple static page since I am already going way overboard for what was required. Although I have been itching to work on something like this and have also been working on a dynamic live journal-style site for a while that includes a custom CMS and a lot of other features, I may end up finishing that project and combining it with this to test it out.
+               </p>
+            </div>
+         </div>
+         <div class="body-wrap-bottom-box">
+            <div class="blog-entery">
+               <div class="blog-entery-title">
+                  First Blog Post
+               </div>
+               <div class="blog-entery-date">
+                  2021-03-01
+               </div>
+               <div class="blog-entery-content">
+                  <p> So, for our initial entry in our blog, we were asked to reflect on the class so far. </p>
+                  <p> Personally, I enjoy the class. Even though it is mostly stuff I have long since learned, I do not mind it. I am still taking it because it is required for my degree. I probably should have taken it at the start of my academic journey, and it would have made more sense, but nonetheless, it is still required of me to graduate. </p>
+                  <p> I really enjoy the way we get and complete our assignments **for** this class in the Word documents. I have done pretty much all of my classes via distance learning, and it is one of the better ways I have seen assignments **implemented**. </p>
+                  <p> Like I stated earlier, most of the topics we cover in this course are well-treaded areas of study for me, but they are still interesting. I honestly think it is good to go over and reflect on this type of stuff to keep it fresh. I do the same thing with a lot of networking content as well—going over it again and again so I **don’t** forget it. It is also kind of **nice** since I am taking two pretty difficult courses alongside this one, and it is nice to have a bit of a break. </p>
+                  <p> All in all, so far, I have been enjoying this class, and **I** am looking forward to the rest of the semester. I really enjoyed this project and getting a chance to break out some of my web design skills, set up a server, write some code, and deploy this little project. </p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <footer class="footer">
+         <div class="footer-content">
+            <div class="footer-content-center">
+               <p>
+                  &copy; Black Magik
+               </p>
+            </div>
+      </footer>
+      </div>
+   </body>
 </html>
+ 
