small cosmetic changes, date fixed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       <link rel="stylesheet" href="/css/style.css">
       <title>DA-103 | Blog</title>
    </head>
+
+<!-- Black Magik Design 2025
+Jonathan Fox
+loadedcoal@gmail.com
+This is a simple blog that I was asked to make a small homework assinment in class. It was not required of us to spin up a server and write code, just to start a blog, BUT it had been a while since I got to mess around with stuff like this and could not help myself.  -->
    <body>
       <div class="main-wrap">
       <div class="top-bar">
@@ -49,14 +54,14 @@
                   First Blog Post
                </div>
                <div class="blog-entery-date">
-                  2021-03-01
+                  2-14-2024
                </div>
                <div class="blog-entery-content">
                   <p> So, for our initial entry in our blog, we were asked to reflect on the class so far. </p>
                   <p> Personally, I enjoy the class. Even though it is mostly stuff I have long since learned, I do not mind it. I am still taking it because it is required for my degree. I probably should have taken it at the start of my academic journey, and it would have made more sense, but nonetheless, it is still required of me to graduate. </p>
-                  <p> I really enjoy the way we get and complete our assignments **for** this class in the Word documents. I have done pretty much all of my classes via distance learning, and it is one of the better ways I have seen assignments **implemented**. </p>
-                  <p> Like I stated earlier, most of the topics we cover in this course are well-treaded areas of study for me, but they are still interesting. I honestly think it is good to go over and reflect on this type of stuff to keep it fresh. I do the same thing with a lot of networking content as well—going over it again and again so I **don’t** forget it. It is also kind of **nice** since I am taking two pretty difficult courses alongside this one, and it is nice to have a bit of a break. </p>
-                  <p> All in all, so far, I have been enjoying this class, and **I** am looking forward to the rest of the semester. I really enjoyed this project and getting a chance to break out some of my web design skills, set up a server, write some code, and deploy this little project. </p>
+                  <p> I really enjoy the way we get and complete our assignments for this class in the Word documents. I have done pretty much all of my classes via distance learning, and it is one of the better ways I have seen assignments implemented. </p>
+                  <p> Like I stated earlier, most of the topics we cover in this course are well-treaded areas of study for me, but they are still interesting. I honestly think it is good to go over and reflect on this type of stuff to keep it fresh. I do the same thing with a lot of networking content as well—going over it again and again so I don’t forget it. It is also kind of nice since I am taking two pretty difficult courses alongside this one, and it is nice to have a bit of a break. </p>
+                  <p> All in all, so far, I have been enjoying this class, and I am looking forward to the rest of the semester. I really enjoyed this project and getting a chance to break out some of my web design skills, set up a server, write some code, and deploy this little project. </p>
                </div>
             </div>
          </div>
