small cosmetic change

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       <link rel="stylesheet" href="/css/style.css">
       <title>DA-103 | Blog</title>
    </head>
-
-<!-- Black Magik Design 2025
+<!-- 
+Black Magik Design 2025
 Jonathan Fox
 loadedcoal@gmail.com
-This is a simple blog that I was asked to make a small homework assinment in class. It was not required of us to spin up a server and write code, just to start a blog, BUT it had been a while since I got to mess around with stuff like this and could not help myself.  -->
+This is a simple blog that I was asked to make a small homework assinment in class. It was not required of us to spin up a server and write code, just to start a blog, BUT it had been a while since I got to mess around with stuff like this and could not help myself.
+-->
    <body>
       <div class="main-wrap">
       <div class="top-bar">
